# tcp-multiplexer

./: Cargo.toml  README.md
layout/: zellij.kdl
src/: client.rs  config.rs  lib.rs  main.rs
src/commands/: server.rs
src/dirs/: mod.rs
src/socket/: wrapper.rs
