[package]
name = "tcp-multiplexer"
version = "0.1.0"
description = "Single-threaded Asyncronous TCP Multiplexer"
repository = "https://github.com/falcucci/tcp-multiplexer"
authors = ["Alexsander Falcucci <alex.falcucci@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
pin-project-lite = "0.2.16"
clap = { version = "4.5.23", features = ["derive", "env"] }
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.186" }
serde_derive = { version = "1.0.186" }
serde_json = "1.0.78"
directories = "5.0.1"
tracing = "0.1.40"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
